--- a/src/app/volume/volume-list/volume-list.component.html
+++ b/src/app/volume/volume-list/volume-list.component.html
@@ -13,15 +13,17 @@
   </app-tabla>
   <ng-template #gridegy>
     <div class="alapkeret">
-      <div>
-        <button (click)="doNav(1)" class="toolbutton">
-          <i class="fa fa-file" aria-hidden="true"></i>
-        </button>
+      <ng-container *ngIf="bbmode === 1">
+        <div>
+          <button (click)="doNav(1)" class="toolbutton">
+            <i class="fa fa-file" aria-hidden="true"></i>
+          </button>
 
-        <button (click)="doNav(17)" class="toolbutton">
-          Ellenőrzés
-        </button>
-      </div>
+          <button (click)="doNav(17)" class="toolbutton">
+            Ellenőrzés
+          </button>
+        </div>
+      </ng-container>
 
       <ng-container *ngIf="egymode === 1">
         <div [@rowanimation]>
