--- a/src/app/volume/volume-teszt/volume-teszt.component.html
+++ b/src/app/volume/volume-teszt/volume-teszt.component.html
@@ -1,13 +1,15 @@
 <div class="alapkeret" [appSpinner]="eppFrissit">
   <h5>Volume ellenőrzés</h5>
-  <div>
+  <div class="editform-row">
+    {{index}}/{{dbv.length}}
+  </div>
+  <div class="editform-row">
     <button [disabled]="eppTesztel" (click)="onInditas()" class="toolbutton">
       Indítás
     </button>
     <button [disabled]="!eppTesztel" (click)="onLeallitas()" class="toolbutton">
       Leállítás
     </button>
-    <h6>{{index}}/{{dbv.length}}</h6>
     <div *ngFor="let h of hibalista">{{h}}</div>
   </div>
 </div>
