--- a/src/app/csoport/csoport-felhasznalo/csoport-felhasznalo.component.html
+++ b/src/app/csoport/csoport-felhasznalo/csoport-felhasznalo.component.html
@@ -2,7 +2,7 @@
   <h5>A csoport felhasználói</h5>
   <table>
     <tbody>
-    <tr *ngFor="let item of DtoCsoportFelhasznalo; let i = index">
+    <tr *ngFor="let item of DtoCsoportFelhasznalo; let i = index" [className]="'inactive'">
       <td>
         <input type="checkbox" [checked]="item.Csoporttag" (click)="checkFelhasznalo(i)">
       </td>
