--- a/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
+++ b/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
@@ -134,15 +134,19 @@
     </div>
   </form>
 
-  <ng-container *ngIf="SzerkesztesMode === 1">
-    <app-helyseg-list [maszk]="DtoEdited.Helysegnev || ''"
-                      (eventSelectzoom)="onHelysegSelectzoom($event)"
-                      (eventStopzoom)="onHelysegStopzoom()"></app-helyseg-list>
-  </ng-container>
-  <ng-container *ngIf="SzerkesztesMode === 2">
-    <app-tevekenyseg-list [maszk]="DtoEdited.Tevekenyseg || ''"
-                      (eventSelectzoom)="onTevekenysegSelectzoom($event)"
-                      (eventStopzoom)="onTevekenysegStopzoom()"></app-tevekenyseg-list>
-  </ng-container>
+  <div id="zoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
+    <div class="zoom-modal-content">
+      <ng-container *ngIf="SzerkesztesMode === 1">
+        <app-helyseg-list [maszk]="DtoEdited.Helysegnev || ''"
+                          (eventSelectzoom)="onHelysegSelectzoom($event)"
+                          (eventStopzoom)="onHelysegStopzoom()"></app-helyseg-list>
+      </ng-container>
+      <ng-container *ngIf="SzerkesztesMode === 2">
+        <app-tevekenyseg-list [maszk]="DtoEdited.Tevekenyseg || ''"
+                          (eventSelectzoom)="onTevekenysegSelectzoom($event)"
+                          (eventStopzoom)="onTevekenysegStopzoom()"></app-tevekenyseg-list>
+      </ng-container>
+    </div>
+  </div>
 </div>
 
