--- a/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
+++ b/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
@@ -134,7 +134,7 @@
     </div>
   </form>
 
-  <div id="zoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
+  <div id="ugyfelzoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
     <div class="zoom-modal-content">
       <ng-container *ngIf="SzerkesztesMode === 1">
         <app-helyseg-list [maszk]="DtoEdited.Helysegnev || ''"
