--- a/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
+++ b/src/app/cikk/cikk-szerkesztes/cikk-szerkesztes.component.html
@@ -81,8 +81,8 @@
     </div>
   </form>
 
-  <div id="zoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
-    <div class="zoom-modal-content">
+  <div id="cikkzoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
+    <div class="zoom-modal-content-primitiv">
       <ng-container *ngIf="SzerkesztesMode === 1">
         <app-me-list [maszk]="DtoEdited.Me || ''"
                      (eventSelectzoom)="onMeSelectzoom($event)"
