--- a/src/styles.css
+++ b/src/styles.css
@@ -199,6 +199,13 @@ table tr.inactive td {
   width: 80%; /* Could be more or less, depending on screen size */
 }
 
+.zoom-modal-content-primitiv {
+  background-color: #fefefe;
+  margin: 5% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 30%; /* Could be more or less, depending on screen size */
+}
 
 
 
