--- a/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
+++ b/src/app/ajanlat/ajanlat-tetel/ajanlat-tetel.html
@@ -1,57 +1,58 @@
 <div class="alapkeret">
-  <form #f="ngForm" (ngSubmit)="onSubmit()">
+  <div class="editform-row">
+      <div class="editform-label">{{item.TetelTipus}}</div>
+      <input type="text" class="editform-edit em20width" id="cikk"
+             maxlength="100" autocomplete="off" style="background-color: aquamarine;display: inline-block"
+             [(ngModel)]="item.CikkNev" name="cikk">
+      <button class="toolbutton" style="display: inline-block" type="button" (click)="CikkZoom()">...</button>
+  </div>
 
-    <div class="editform-row">
-        <div class="editform-label">{{item.TetelTipus}}</div>
-        <input type="text" class="editform-edit em20width" id="cikk"
-               maxlength="100" autocomplete="off" style="background-color: aquamarine;display: inline-block"
-               [(ngModel)]="item.CikkNev" name="cikk">
-        <button class="toolbutton" style="display: inline-block" type="button" (click)="CikkZoom()">...</button>
+  <div class="editform-row">
+    <div class="editform-row-block">
+      <div class="editform-label">Mennyiség</div>
+      <input type="number" class="editform-edit em6width" id="mennyiseg"
+             [(ngModel)]="item.Mennyiseg" name="mennyiseg">
     </div>
 
-    <div class="editform-row">
-      <div class="editform-row-block">
-        <div class="editform-label">Mennyiség</div>
-        <input type="number" class="editform-edit em6width" id="mennyiseg"
-               [(ngModel)]="item.Mennyiseg" name="mennyiseg">
-      </div>
+    <div class="editform-row-block">
+      <div class="editform-label">Egységár</div>
+      <input type="number" class="editform-edit em6width" id="egysegar"
+             [(ngModel)]="item.EgysegAr" name="egysegar">
+    </div>
+  </div>
 
-      <div class="editform-row-block">
-        <div class="editform-label">Egységár</div>
-        <input type="number" class="editform-edit em6width" id="egysegar"
-               [(ngModel)]="item.EgysegAr" name="egysegar">
-      </div>
+  <div class="editform-row">
+    <div class="editform-row-block">
+      <div class="editform-label">Egys. teljesítmény</div>
+      <input type="number" class="editform-edit em6width" id="egysegnyi"
+             [(ngModel)]="item.EgysegnyiTeljesitmeny" name="egysegnyi">
     </div>
 
-    <div class="editform-row">
-      <div class="editform-row-block">
-        <div class="editform-label">Egys. teljesítmény</div>
-        <input type="number" class="editform-edit em6width" id="egysegnyi"
-               [(ngModel)]="item.EgysegnyiTeljesitmeny" name="egysegnyi">
-      </div>
-
-      <div class="editform-row-block">
-        <div class="editform-label">Garancia</div>
-        <input type="number" class="editform-edit em6width" id="garancia"
-               [(ngModel)]="item.Garancia" name="garancia">
-      </div>
+    <div class="editform-row-block">
+      <div class="editform-label">Garancia</div>
+      <input type="number" class="editform-edit em6width" id="garancia"
+             [(ngModel)]="item.Garancia" name="garancia">
     </div>
+  </div>
 
-    <div class="editform-okcancel">
-      <button class="editform-okbutton" [disabled]="!f.valid" type="submit">Ok</button>
-      <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
-    </div>
-  </form>
+  <div class="editform-okcancel">
+    <button class="editform-okbutton" type="button" (click)="onSubmit()">Ok</button>
+    <button class="editform-cancelbutton" type="button" (click)="cancel()">Mégsem</button>
+  </div>
 
 <!--  export eAjanlatSzerkesztesModeMode {
   Blank = 0,
   CikkZoom = 1
   }-->
 
-  <ng-container *ngIf="AjanlatSzerkesztesMode === 1">
-    <app-cikk-list [maszk]="item.CikkNev || ''"
-                   (eventSelectzoom)="onCikkSelectzoom($event)"
-                   (eventStopzoom)="onCikkStopzoom()"></app-cikk-list>
-  </ng-container>
+  <div id="ajanlatzoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
+    <div class="zoom-modal-content">
+      <ng-container *ngIf="AjanlatSzerkesztesMode === 1">
+        <app-cikk-list [maszk]="item.CikkNev || ''"
+                       (eventSelectzoom)="onCikkSelectzoom($event)"
+                       (eventStopzoom)="onCikkStopzoom()"></app-cikk-list>
+      </ng-container>
+    </div>
+  </div>
 </div>
 
