--- a/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
+++ b/src/app/irat/irat-szerkesztes/irat-szerkesztes.component.html
@@ -74,18 +74,22 @@
   </form>
 
   <div id="iratzoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
-    <div class="zoom-modal-content">
+
       <ng-container *ngIf="SzerkesztesMode === 1">
-        <app-irattipus-list [maszk]="DtoEdited.Irattipus || ''"
-                            (eventSelectzoom)="onIrattipusSelectzoom($event)"
-                            (eventStopzoom)="onIrattipusStopzoom()"></app-irattipus-list>
+        <div class="zoom-modal-content-primitiv">
+          <app-irattipus-list [maszk]="DtoEdited.Irattipus || ''"
+                              (eventSelectzoom)="onIrattipusSelectzoom($event)"
+                              (eventStopzoom)="onIrattipusStopzoom()"></app-irattipus-list>
+        </div>
       </ng-container>
 
       <ng-container *ngIf="SzerkesztesMode === 2">
-        <app-ugyfel-list [maszk]="DtoEdited.Ugyfelnev || ''"
-                         (eventSelectzoom)="onUgyfelSelectzoom($event)"
-                         (eventStopzoom)="onUgyfelStopzoom()"></app-ugyfel-list>
+        <div class="zoom-modal-content">
+          <app-ugyfel-list [maszk]="DtoEdited.Ugyfelnev || ''"
+                           (eventSelectzoom)="onUgyfelSelectzoom($event)"
+                           (eventStopzoom)="onUgyfelStopzoom()"></app-ugyfel-list>
+        </div>
       </ng-container>
-    </div>
+
   </div>
 </div>
