--- a/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
+++ b/src/app/ugyfel/ugyfel-szerkesztes/ugyfel-szerkesztes.component.html
@@ -135,7 +135,7 @@
   </form>
 
   <div id="ugyfelzoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
-    <div class="zoom-modal-content">
+    <div class="zoom-modal-content-primitiv">
       <ng-container *ngIf="SzerkesztesMode === 1">
         <app-helyseg-list [maszk]="DtoEdited.Helysegnev || ''"
                           (eventSelectzoom)="onHelysegSelectzoom($event)"
