--- a/src/app/bizonylat/bizonylattetel-szerkesztes/bizonylattetel-szerkesztes.component.html
+++ b/src/app/bizonylat/bizonylattetel-szerkesztes/bizonylattetel-szerkesztes.component.html
@@ -165,27 +165,37 @@
   TermekdijZoom = 4
   }-->
 
-  <ng-container *ngIf="TetelSzerkesztesMode === 1">
-    <app-cikk-list [maszk]="TetelDtoEdited.Megnevezes || ''"
-                   (eventSelectzoom)="onCikkSelectzoom($event)"
-                   (eventStopzoom)="onCikkStopzoom()"></app-cikk-list>
-  </ng-container>
+  <div id="bizonylattetelzoombox" class="zoom-modal" role="dialog"  data-backdrop="false" data-keyboard="false">
+    <ng-container *ngIf="TetelSzerkesztesMode === 1">
+      <div class="zoom-modal-content">
+        <app-cikk-list [maszk]="TetelDtoEdited.Megnevezes || ''"
+                       (eventSelectzoom)="onCikkSelectzoom($event)"
+                       (eventStopzoom)="onCikkStopzoom()"></app-cikk-list>
+      </div>
+    </ng-container>
 
-  <ng-container *ngIf="TetelSzerkesztesMode === 2">
-    <app-me-list [maszk]="TetelDtoEdited.Me || ''"
-                 (eventSelectzoom)="onMeSelectzoom($event)"
-                 (eventStopzoom)="onMeStopzoom()"></app-me-list>
-  </ng-container>
+    <ng-container *ngIf="TetelSzerkesztesMode === 2">
+      <div class="zoom-modal-content-primitiv">
+        <app-me-list [maszk]="TetelDtoEdited.Me || ''"
+                     (eventSelectzoom)="onMeSelectzoom($event)"
+                     (eventStopzoom)="onMeStopzoom()"></app-me-list>
+      </div>
+    </ng-container>
 
-  <ng-container *ngIf="TetelSzerkesztesMode === 3">
-    <app-afakulcs-list [maszk]="TetelDtoEdited.Afakulcs || ''"
-                       (eventSelectzoom)="onAfakulcsSelectzoom($event)"
-                       (eventStopzoom)="onAfakulcsStopzoom()"></app-afakulcs-list>
-  </ng-container>
+    <ng-container *ngIf="TetelSzerkesztesMode === 3">
+      <div class="zoom-modal-content-primitiv">
+        <app-afakulcs-list [maszk]="TetelDtoEdited.Afakulcs || ''"
+                           (eventSelectzoom)="onAfakulcsSelectzoom($event)"
+                           (eventStopzoom)="onAfakulcsStopzoom()"></app-afakulcs-list>
+      </div>
+    </ng-container>
 
-  <ng-container *ngIf="TetelSzerkesztesMode === 4">
-    <app-termekdij-list [maszk]="TetelDtoEdited.Termekdijkt || ''"
-                        (eventSelectzoom)="onTermekdijSelectzoom($event)"
-                        (eventStopzoom)="onTermekdijStopzoom()"></app-termekdij-list>
-  </ng-container>
+    <ng-container *ngIf="TetelSzerkesztesMode === 4">
+      <div class="zoom-modal-content-primitiv">
+        <app-termekdij-list [maszk]="TetelDtoEdited.Termekdijkt || ''"
+                            (eventSelectzoom)="onTermekdijSelectzoom($event)"
+                            (eventStopzoom)="onTermekdijStopzoom()"></app-termekdij-list>
+      </div>
+    </ng-container>
+  </div>
 </div>
